--- a/maven-examples/maven-example/pom.xml
+++ b/maven-examples/maven-example/pom.xml
@@ -20,6 +20,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>artifactory-release</id>
+            <url>http://35.199.180.82:8082/artifactory/test-libs-release/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
