--- a/maven-examples/maven-example/pom.xml
+++ b/maven-examples/maven-example/pom.xml
@@ -34,6 +34,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-utils</artifactId>
+        <version>3.3.0</version> <!-- Replace with the desired version -->
+    </dependency>
     </dependencies>
 
     <build>
