--- a/maven-examples/maven-example/pom.xml
+++ b/maven-examples/maven-example/pom.xml
@@ -23,6 +23,10 @@
 
     <repositories>
         <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
             <id>artifactory-release</id>
             <url>http://localhost:8082/artifactory/jen-int-libs-release/</url>
         </repository>
